# Task_2

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
cmake/: CompilerWarnings.cmake  PackageManager.cmake  Packages.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake
data/: generate_numbers.sh  test_1e1  test_1e2  test_1e3  test_1e4  test_1e5  test_1e6  test_1e7  test_1e8  test_5
include/: interlayer.h  lis.h  return_status.h
src/: interprocess.c  lis.c  main.c
test/: CMakeLists.txt
test/src/: cmocka_lis.c  test.c  test_lis.c
